--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -24,16 +24,16 @@
 #### [ 中共二十大政治局常委人选确定？王沪宁或将出局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657270.md)
 #### [ 【新闻看点】中共喉舌不同调 谁跟习唱对台戏？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833235.md)
 #### [ 中共二十大名单出炉  网议：精准设计的举手机器](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103536768.md)
-#### [ 习近平20大后影响力还能继续？学者解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833167.md)
 #### [ 岳山：二十大代表名单藏内斗和政治秘密](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833108.md)
+#### [ 习近平20大后影响力还能继续？学者解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833167.md)
+#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 美专家：四大迹象表明中共开始崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13832549.md)
 #### [ 中南海公布官员下台15标准 涉及习近平条款消失](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103536935.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 二十大前维稳 北京令长途司机戴电子手环](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13832464.md)
+#### [ 二十大名单出炉 习“被软禁”传言源头是他？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657327.md)
 #### [ 章天亮:“习被软禁”成外媒热词 政变与习下台可能性有多少?](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657228.md)
 #### [ 中共二十大代表名单缺少4人 1名省部级官员猝死](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103536940.md)
 #### [ 央视一姐惨了 情夫老公被团灭](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657150.md)
-#### [ 二十大名单出炉 习“被软禁”传言源头是他？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657327.md)
 #### [ 二十大前防控升级 进出京城被“弹窗”管制](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13832665.md)
 #### [ 影射软禁习近平？日本瓶装玩偶引热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657183.md)
 #### [ 胡锡进罕见称：官方疫情信息应公开透明](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832896.md)
@@ -47,7 +47,7 @@
 #### [ 专家析习近平终身制背后的问题](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657249.md)
 #### [ 【内幕】刘亚洲代表核心太子党与习近平决裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/993813.md)
 #### [ 【一线采访】新疆王家梁抗议封控 当局解封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13832937.md)
+#### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
 #### [ 王友群：孙力军傅政华为什么被判死缓？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13832108.md)
 #### [ 王立科下属 鞍山公安局前局长陈志刚被查(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017612.md)
 #### [ 孙力军、傅政华等相继被判重判 分析：背后有天意(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017382.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
