--- a/pages/prog202/a103539448.md
+++ b/pages/prog202/a103539448.md
@@ -1,4 +1,4 @@
-### 【晚间新闻】8月31日完整版
+### 【晚间新闻】9月28日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,26 +7,27 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2022年09月01日讯】民众呼唤中国版
-  <ok href="https://www.ntdtv.com/gb/戈尔巴乔夫.htm">
-   戈尔巴乔夫
+  【新唐人北京时间2022年09月29日讯】
+  <ok href="https://www.ntdtv.com/gb/飓风伊恩.htm">
+   飓风伊恩
   </ok>
-  <ok href="https://www.ntdtv.com/gb/中共.htm">
-   中共
+  近五级威力 登陆
+  <ok href="https://www.ntdtv.com/gb/佛州.htm">
+   佛州
   </ok>
-  吓懵急删帖；
-  <ok href="https://www.ntdtv.com/gb/乌克兰.htm">
-   乌克兰
+  ；中南海草木皆兵 习复出后加速处置刺习高官；
+  <ok href="https://www.ntdtv.com/gb/长春.htm">
+   长春
   </ok>
-  南方反攻吁夺回领土 激战后双方各说各话；美国截获1180万
-  <ok href="https://www.ntdtv.com/gb/可卡因.htm">
-   可卡因
+  一餐厅起火17遇难3伤 网民质疑伤亡原因 ；
+  <ok href="https://www.ntdtv.com/gb/中共警方.htm">
+   中共警方
   </ok>
-  以婴儿湿巾蒙混入境；返校日将至
-  <ok href="https://www.ntdtv.com/gb/纽约市警.htm">
-   纽约市警
+  在加拿大设立
+  <ok href="https://www.ntdtv.com/gb/派出所.htm">
+   派出所
   </ok>
-  送书包促进警民互动。
+  跨国镇压引忧。
  </p>
  <div class="single_ad">
  </div>
@@ -34,13 +35,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103515748.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103515748.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103515748.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2022/09/01/a103515748.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103539448.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103539448.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103539448.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2022/09/29/a103539448.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103515748.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103539448.md' width='0px' height='0px'/>
